--- a/_posts/2020-12-16-dot-map.md
+++ b/_posts/2020-12-16-dot-map.md
@@ -5,9 +5,10 @@ published: true
 tags: [dataviz, hvplot]
 excerpt: "Use a dot map to present trip mode choice."
 hv-loader:
-
+  hv-chart-1: ["charts/travel_mode_dot_map_20.html", "500"]
 toc: true
 toc_sticky: true
 ---
 ## Introduction
 Dot Map: where we map each trip to its state and color by mode choice.
+<div id="hv-chart-1"></div>
